# eQet

./: .env  README.md  index.html  package.json  vite.config.js  wrangler.jsonc
.github/workflows/: set.yaml
src/: eewManager.js  main.js  styles.css
src-tauri/: Cargo.toml  cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: wavecalc.js
src/map/: autopan.js  map.js
src/motion/: motionManager.js  motionPanel.js
src/ui/: alerts.js  panel.js  settings.js  stations.js  waves.js
src/ws/: eewManager.js  tsunamiManager.js  wolfx.js
