[package]
name = "eqet"
version = "0.1.3"
description = "¯\\_(ツ)_/¯"
authors = ["CurrentEEW", "vo1dd"]
edition = "2021"
rust-version = "1.77"
build = "build.rs" 

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-updater = "2.0.0"
tauri-plugin-shell = "2.0.0"
